fixed nav on mobile

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -42,7 +42,7 @@ section, footer, div {
       header
 ------------------*/
 header {
-  position: fixed;
+  position: absolute;
   z-index: 1;
   width: 100%;
   padding-bottom: 3.5rem;
@@ -59,16 +59,21 @@ header {
 
 .logo img {
   display: block;
-  margin: 0;
+  margin: 0 auto;
 }
 
 nav {
-  position: fixed;
+  position: absolute;
   z-index: 1;
   height: 7rem;
   width: 90%;
   left: 50%;
   transform: translate(-50%, 0);
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
 }
 
 .main-menu {
@@ -98,9 +103,11 @@ nav {
 
 @media screen and (min-width: 768px) {
   header {
+    position: fixed;
     padding-bottom: 0rem;
   }
   nav {
+    position: absolute;
     width: 50%;
     left: 90%;
     transform: translate(-90%, 0);
@@ -108,6 +115,9 @@ nav {
   .logo {
     float: left;
     text-align: left;
+  }
+  .logo img {
+    margin: 0;
   }
   .main-menu {
     float: right;
